--- a/trunk/perldoc/ko/perl/5.10/perlipc.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlipc.pod
@@ -1539,9 +1539,7 @@ depending on your system.
 
 UNIX 에서 파생한 OS 에 한정하지 않음 
 (예를들어 PC 에서는 WinSock 이(몇가지의 VMS 라이브러리처럼) 
-소켓 섶포트를 지원하고 있습니다)から派生したオペレーティングシステムに限定されることはない
-(例えば PC では WinSock が(幾つかの VMS ライブラリのように)
-ソケットサポートを提供しています)에도 상관없이, 당신이 사용하는 시스템에서는 
+에도 상관없이, 당신이 사용하는 시스템에서는 
 소켓을 사용할 수 없을 지도 모릅니다.
 그 경우, 그 항에 쓰여있는 일은 당신에게 도움이 되지 않겠죠.
 소켓을 사용하면 가상회로(즉 TCP 스트림)이나 데이터그램(UDP 패킷)의 양쪽이 가능하게 됩니다.
@@ -1603,7 +1601,7 @@ NNTP 나 SMTP 처럼 이미 존재하는 프로토콜을 위해 서버/클라이
 
 =head2 Internet Line Terminators
 
-(インターネットの行終端子)
+(인터넷의 행단말자)
 
 =begin original
 
@@ -1618,20 +1616,19 @@ but unless you're on a Mac, you'll probably be ok.
 
 =end original
 
-インターネットでの行終端子は "\015\012" です。
-UNIX で使われる ASCII のバリエーションでは、通常は“\r\n”のように
-記述しますが、他のシステムでは、“\r\n”は"\015\015\012" だったり、
-"\012\012\015" だったりあるいはまったく違うものであったりします。
-“\015\012”は標準的な書き方(あなたが書いたままのものになります)ですが、
-入力中にある独立した“\012”を受け付けることも推奨されています(が、
-あなたが要求するときにはそれを穏やかなものにしましょう)。
-このマニュアルページにあるプログラムについて、常に最善のものを
-使ってはいませんが、あなたが Mac を使っているのでなければ
-気にすることはないでしょう。
+인터넷에서의 행종단자는 "¥015¥012" 입니다. 
+UNIX 에서 사용되는 ASCII 의 배리에이션에서는 보통은 "¥r¥n"처럼  기술하지만,
+다른 시스템에서는 "¥r¥n" 은 "¥015¥015¥012" 거니, 
+"¥012¥012¥015" 이거나 혹은 전혀 다른 것이거나 합니다.
+"¥015¥012"는 표준적인 쓰기방법(당신이 쓴대로 입니다)이지만, 
+입력중에 어느 독립한  "¥012"를 받는 것도 추천됩니다.
+이 매뉴얼 페이지에 있는 프로그램에 대해서, 항상 최선의 것을 
+사용하고 있지는 않지만, 당신이 Mac 을 사용하고 있지 않다면 
+신경쓸 일은 없을 겁니다.
 
 =head2 Internet TCP Clients and Servers
 
-(インターネットの TCP クライアントとサーバー)
+(인터넷의 TCP 클라이언트와 서버)
 
 =begin original
 
@@ -1640,8 +1637,8 @@ communication that might extend to machines outside of your own system.
 
 =end original
 
-自分の使っているシステムの外側にあるもマシンにまでクライアント-
-サーバーの通信を広げたい場合には Internet-domain ソケットを使います。
+자신이 사용하는 시스템의 바깥쪽에 있는 머신에게 클라이언트-서버 통신을 
+넓히고 싶은 경우에는 Internet-domain 소켓을 사용합니다.
 
 =begin original
 
@@ -1649,8 +1646,7 @@ Here's a sample TCP client using Internet-domain sockets:
 
 =end original
 
-以下のプログラムは、Internet-domain ソケットを使った TCP クライアントの
-例です:
+아래의 프로그램은 Internet-domain 소켓을 사용한 TCP 클라이언트의 예제입니다:
 
     #!/usr/bin/perl -w
     use strict;
@@ -1685,12 +1681,11 @@ instead.
 
 =end original
 
-そして以下に挙げるのが上記のクライアントと対応するサーバーです。
-ここではアドレスを INADDR_ANY としているので、カーネルは multihomed
-hosts 上の適切なインターフェースを選択することができます。
-(ファイヤーウォールやゲイトウェイの外側のように)特定のインターフェースを
-使いたいのであれば、この部分を、自分の使いたい本当のアドレスで
-埋めるようにすべきです。
+그리고 아래에 예를 든 것이 위의 클라이언트와 대응하는 서버입니다.
+여기에서는 주소를 INADDR_ANY 라고 하고 있기 때문에, 커널은 multihomed hosts 
+상의 적절한 인터페이스를 선택할 수 있습니다.
+(방화벽이나 게이트웨이의 바깥쪽처럼) 특정의 인터페이스를 사용하고 싶다면, 
+이 부분을 자신이 사용하고 싶은 진짜 주소로 채워넣어야 합니다.
 
     #!/usr/bin/perl -Tw
     use strict;
@@ -1739,12 +1734,11 @@ go back to service a new client.
 
 =end original
 
-以下の例はマルチスレッドバージョンです。
-これはほとんどの典型的なサーバーがそうであるようにマルチスレッドに
-なっていて、クライアントのリクエストを処理するためにスレイブサーバーを
-spawn(fork) します。
-このため、マスターサーバーは新しいクライアントに対してサービスするために
-即座に復帰できます。
+아래의 예제는 멀티스레드 버젼입니다.
+이것은 대부분의 전형적인 서버가 그렇듯이 멀티스레드가 되고, 
+클라이언트의 리퀘스트를 처리하기 위해 슬레이브서버를 spawn(fork) 합니다.
+이 때문에, 마스터 서버는 새로운 클라이언트에 대해서 서비스하기 위해 
+즉시 복귀할 수 있습니다.
 
     #!/usr/bin/perl -Tw
     use strict;
@@ -1846,19 +1840,18 @@ living dead.
 
 =end original
 
-このサーバーはリクエストがくる度に fork() を使って子バージョンの複製を
-行うので、問題を取り除きます。
-このやり方は、あなたが常に望んではいないかもしれませんが、一度に多くの
-リクエストを処理することができます。
-fork()を使わなかったとしても、listen() は多くの一時停止した
-コネクション(pending connections) を扱えます。
-サーバーを fork するので、死んだ子供(UNIX 世界ではゾンビと呼ばれるもの)の
-後始末に関して注意深くする必要があります。
-なぜなら、そうしなければプロセステーブルがすぐに埋めつくされることに
-なるからです。
-ここで REAPER サブルーチンは終了した全ての子プロセスのために
-waitpid() を呼び出すために使われ、従って子プロセスがきれいに終了し、
-ゾンビの集団に加わらないことを確実にします。
+이 서버는 리퀘스트가 올 때마다 fork() 를 사용해서 자식 버젼의 복제를 수행하기 때문에,
+문제를 제외합니다.
+이 방법은, 당신이 항상 원하는 것이 아닐지도 모르겠지만, 한번에 많은 
+리퀘스트를 처리할 수 있습니다.
+fork() 를 사용하지 않았다고 해도, listen() 은 많은 일시정지한 커넥션(
+pending connections) 를 다룹니다.
+서버를 fork 하기 때문에, 죽은 자식(UNIX 세계에서는 좀비라고 부르는 것)의 
+뒷처리에 관해서 주의깊게 대할 필요가 있습니다.
+왜냐면 그렇게 하지 않으면 프로세스 테이블이 즉시 채워지기때문입니다.
+여기에서 REAPER 서브루틴은 종료한 모든 자식 프로세스를 위해서 
+waitpid() 를 호출하기 위해 사용되고, 따라서 자식 프로ㅔ쓰가 깔끔하게 종료하고
+좀비 집단에 참가하지 않는 다는 것을 확실하게 합니다.
 
 =begin original
 
@@ -1872,15 +1865,13 @@ notifies the parent process with a CHLD signal.
 
 =end original
 
-while ループの中で accept() を呼び出して、偽の値を返すかどうかを
-チェックします。
-これは普通報告する必要のあるシステムエラーを示しています。
-しかし、Perl 5.7.3 で導入された安全なシグナル(上述の
-L</Deferred Signals (Safe Signals)> を参照してください) の導入は、
-プロセスがシグナルを受信した場合にも accept() が中断されうることを
-意味します。
-これは典型的には、fork した子プロセスの一つが終了して、親プロセスに
-CHLD シグナルを通知した場合に起こります。
+while 루프 안에서 accept() 를 호출해서, 거짓 값을 반환하는 지 어떤지를 체크합니다.
+이것은 보통 보고하는 필요가 있는 시스템 에러를 나타냅니다.
+그러나, Perl 5.7.3 에서 도입된 안전한 시그널(위의 
+L</Deferred Signals (Safe Signals)> 을 참조해주세요)의 도입은, 
+프로세스가 시그널을 수신한 경우에도 accept() 가 중단되는 것을 의미합니다.
+이것은 전형적으로는 fork 한 자식 프로세스의 하나가 종료해서, 부모 프로세스에 
+CHLD 시그널에 통지한  경우에 일어납니다.
 
 =begin original
 
@@ -1895,15 +1886,13 @@ update the local copy leaving the original unchanged.
 
 =end original
 
-もし accept() がシグナルで中断されると、$! に EINTR がセットされます。
-これが起きた場合、次の反復と次の accept() の呼び出しを安全に続行できます。
-シグナルハンドラコードが $! を変更しないようにしないと、このテストが
-ほぼ確実に失敗するということは重要です。
-REAPER サブルーチンでは waitpid() を呼び出す前にローカル版の $! を
-作成しています。
-waitpid() が $! に ECHILD をセットすると(これはどの子プロセスも待っていない
-ときに必然的に発生します)、これは元の値を変更せず、ローカルなコピーを
-更新します。
+만약 accept() 가 시그널에서 중단되면, $! 에 EINTR 이 정의됩니다.
+이것이 일어난 경우, 다음의 반복과 다음의 accept() 의 호출을 안전하게 속행할 수 있습니다.
+시그널핸들러 코드가 $! 을 변경하지 않도록 하면, 이 테스트가 거의 확실하게 
+실패한다는 것은 중요합니다.
+REAPER 서브루틴에서는 waitpid() 를 호출하기 전에 로컬 판의 $! 을 작성하고 있습니다.
+waitpid() 가 $! 에 ECHILD 를 설정하면(이것은 어느 프로세스도 가지고 있지 않을 때에 
+필연적으로 발생합니다), 이것은 원래의 값을 변경하지 않고, 로컬한 복사를 갱신합니다.
 
 =begin original
 
@@ -1915,12 +1904,12 @@ be able to compromise your system.
 
 =end original
 
-setuid やsetgid をされていない状態で実行されているとしても、汚染検査
-(L<perlsec> を参照)をするために B<-T> フラグを使うことをお勧めします。
-これは、サーバーやその他の他の誰かのために実行される(CGI スクリプトのような)
-プログラムに対しては常に良い考えになります。
-なぜならそうすることによって、外部の人間があなたのシステムに入ってくる
-ことができる可能性を減らすからです。
+setuid 나 setgid 되지 않은 상태에서 실행된다고 해도, 오염검사 
+(L<perlsec> 를 참조)를 하기 위해 B<-T> 플래그를 사용하는 것을 추천합니다.
+이것은 서버나 그 외의 다른 누군가를 위해 실행되는 (CGI 스크립트 같은)
+프로그램에 대해서는 항상 좋은 방안이 됩니다.
+왜냐면 그렇게 함에 따라 외부사람이 당신의 시스템에 들어올 수 있는 가능성을 
+줄일 수 있기 때문입니다.
 
 =begin original
 
@@ -1930,9 +1919,9 @@ differ from the system on which it's being run:
 
 =end original
 
-もう一つの TCP クライアントを見てみましょう。
-これは複数の異なるマシン上の TCP の“time”サービスに接続してクライアントが
-走っているシステムと時計がどれくらい違っているのを出力します:
+다른 하나의 TCP 클라이언트를 보도록 합니다.
+이것은 복수의 다른 머신 상의 TCP 의 "time" 서비스에 접속해서 클라이언트가 
+달리는 시스템과 시계가 어느정도 다른 가를 출력합니다:
 
     #!/usr/bin/perl  -w
     use strict;
@@ -1977,14 +1966,13 @@ domain sockets can show up in the file system with an ls(1) listing.
 
 =end original
 
-Internet-domain のサーバーとクライアントは良いものですが、ローカル
-コミュニケーションに関してはどうでしょうか?
-同じようにセットアップすることができますが、同じ様に(通信を)行うことは
-できません。
-UNIX ドメインソケットはカレントホストにローカルで、しばしばパイプを
-実装するために内部的に使われています。
-Internet ドメインソケットとは異なり、UNIX ドメインソケットは、
-ls(1) を使ってファイルシステムの中で見つけることができます。
+Internet-domain 의 서버와 클라이언트는 좋은 것이지만, 로컬 커뮤니케이션에 관해서는 
+어떨까요?
+마찬가지로 셋업할 수 있지만, 이처럼 통신을 수행할 수는 없습니다.
+UNIX 도메인 소켓은 커런트 호스트에 로컬에서 가끔 하이픈을 굿ㅇ하기 위해 
+내부적으로 사용됩니다.
+Internet 도메인 소켓과는 다르게 UNIX 도메인 소켓은 ls(1) 를 사용해서 
+파일시스템 안에서 발견할 수 있습니다.
 
     % ls -l /dev/log
     srw-rw-rw-  1 root            0 Oct 31 07:23 /dev/log
@@ -1995,7 +1983,7 @@ You can test for these with Perl's B<-S> file test:
 
 =end original
 
-これを、Perl のファイルテスト B<-S> を使って行えます:
+이것을  Perl 의 파일테스트 B<-S> 를 사용해서 수행할 수 있습니다:
 
     unless ( -S '/dev/log' ) {
 	die "something's wicked with the log system";
@@ -2007,7 +1995,7 @@ Here's a sample Unix-domain client:
 
 =end original
 
-UNIX ドメインクライアントの例です:
+UNIX 도메인 클라이언트의 예제입니다:
 
     #!/usr/bin/perl -w
     use Socket;
@@ -2030,11 +2018,10 @@ to be on the localhost, and thus everything works right.
 
 =end original
 
-そして対応するサーバーです。
-ここで、あなたはやっかいなネットワーク終端子について思い煩う
-必要はありません。
-なぜなら、UNIX のドメインソケットはローカルホストにおいて完全に
-満たされるものであって、そのため、全てはうまくいくのです。
+그리고 대응하는 서버입니다.
+여기에서 당신은 걱정될 네트워크 종단자에 대해서 생각할 필요는 없습니다.
+왜냐면, UNIX 의 도메인 소켓은 로컬 호스트에 대해서 완전하게 
+만족된 것이어서, 그 때문에 모든 것은 잘 되는 것입니다.
 
     #!/usr/bin/perl -Tw
     use strict;
@@ -2114,9 +2101,9 @@ other server.
 
 =end original
 
-見てわかるように、Internet domain TCP サーバーとほとんど同じです。
-実際には、まったく変っていない幾つかの重複した関数 spawn(), 
-logmsg(), ctime(), REAPER() を取り除いてあります。
+보면 알듯이, Internet domain TCP 서버와 대부분 같습니다.
+실제로는 전혀 바뀌지 않은 몇가지의 중복한 함수 spawn(), 
+logmsg(), ctime(), REAPER() 를 빼고 있습니다.
 
 =begin original
 
@@ -2128,13 +2115,12 @@ arguments.
 
 =end original
 
-ではなぜ、単純な名前付きパイプではなく UNIX ドメインソケットを
-使いたがるのでしょうか?
-その理由は、名前付きパイプがあなたにセッションを与えないからです。
-あなたはあるプロセスから来たデータと、それとは別のプロセスからきた
-データとを区別することができません。
-ソケットプログラミングを行うことで、クライアント毎に別々のセッションを
-持てるようになります: これが accept() が二つの引数を取る理由です。
+그럼 왜, 단순한 이름붙은 파이프가 아닌 UNIX 도메인 소켓을 사용하고 싶어하는 걸까요?
+그 이유는 이름붙은 파이프가 당신에게 세션을 주지 않기 때문입니다.
+당신은 어느 프로세스에서 온 데이터와 그것과는 다른 별도의 프로세스에서 온 데이터를 
+구별할 수 없습니다.
+소켓 프로그래밍을 수행하는 것으로 클라이언트 마다 별도의 세션을 가지게 할 수 있습니다: 이것은 
+accept() 가 두가지의 인수를 취하는 이유입니다.
 
 =begin original
 
@@ -2146,15 +2132,15 @@ as a Unix-domain client and connects to your private server.
 
 =end original
 
-例えば、CGI インターフェースを通してのみ World Wide Web からアクセスされる、
-長時間実行されているデータベースサーバーデーモンを持っているとしましょう。
-この場合、あなたの好きなようにチェックやログの記録を実行するような小さく、
-単純な CGI プログラムを持って、UNIX ドメインクライアントとして振る舞う
-プライベートなサーバーに接続させるといったことができるでしょう。
+예를들면, CGI 인터페이스를 통해서만 World Wide Web 에서 접근하면, 
+장시간 실행되는 데이터베이스 서버 데몬을 가지고 있다고 합니다.
+이 경우, 당신이 좋을대로 체크나 로그를 기록을 실행하는 작고 단순한 CGI 프로그램을 가지고, 
+UNIX 도메인 클라이언트로써 행동하는 프라이베이트한 서버에 접속하게 하는 것이 
+가능하겠죠.
 
 =head1 TCP Clients with IO::Socket
 
-(IO::Socket を使った TCP クライアント)
+(IO::Socket 을 사용한 TCP 클라이언트)
 
 =begin original
 
@@ -2169,19 +2155,17 @@ to name a few.
 
 =end original
 
-ソケットプログラミングに対する高水準インターフェースのために、IO::Socket
-モジュールはオブジェクト指向アプローチを提供します。
-IO::Socket モジュールはリリース 5.004 の標準 Perl 配布キットの一部として
-含まれています。
-あなたが以前のバージョンの Perl を使っているのであれば、
-CPAN から IO::Socket を入手します。
-そこでは、以下に挙げるようなシステムに対する簡単なインターフェースを
-提供するシステムも見つけることができるでしょう: DNS, FTP, Ident (RFC 931),
-NIS, NISPlus, NNTP, Ping, POP3, SMTP, SNMP, SSLeay, Telnet, Time など。
+소켓 프로그래밍에 대해서 고수준의 인터페이스를 위해서 IO::Socket 모듈은 
+오브젝트 지향을 제공합니다.
+IO::Socket 모듈은 릴리즈 5.004 의 표준 Perl 배포키트의 일부로써 포함되어 있습니다.
+당신이 이전의 버젼의 Perl 을 가지고 있다면, CPAN 에서 IO::Socket 을 입수합니다.
+거기에서 아래에 예를 든 것같은 시스템에 대한 단순한 인터페이스를 제공하는 
+시스템을 발견할 수 있을 겁니다: DNS, FTP, Ident (RFC 931),
+NIS, NISPlus, NNTP, Ping, POP3, SMTP, SNMP, SSLeay, Telnet, Time 등..
 
 =head2 A Simple Client
 
-(単純なクライアント)
+(단순한 클라이언트)
 
 =begin original
 
@@ -2191,9 +2175,8 @@ that the server there cares to provide.
 
 =end original
 
-以下の例は“localhost”というホスト名の 13 番ポートにある“dyatime”
-サービスに対する TCP コネクションを作成するクライアントで、そのサーバーが
-提供するデータをすべて出力します。
+아래의 예제는 "localhost" 라는 호스트이름의 13번 포트인 "dyatime" 서비스에 대한 
+TCP 커넥션을 작성하는 클라이언트로 그 서버가 제공하는 데이터를 모두 출력합니다.
 
     #!/usr/bin/perl -w
     use IO::Socket;
@@ -2212,7 +2195,7 @@ looks like this:
 
 =end original
 
-このプログラムを実行すると、以下のような返事が返ってくるでしょう:
+이 프로그램을 실행하면, 아래처럼 답장이 돌아올 겁니다:
 
     Wed May 14 08:40:46 MDT 1997
 
@@ -2222,7 +2205,7 @@ Here are what those parameters to the C<new> constructor mean:
 
 =end original
 
-C<new> コンストラクターに対するパラメーターの意味を説明します:
+C<new> 생성자에 대한 파라메터의 의미를 설명합니다:
 
 =over 4
 
@@ -2238,13 +2221,12 @@ can be used to make a datagram socket, used for message-passing.
 
 =end original
 
-これは使用するプロトコルです。
-この例では、私たちはストリーム指向のコネクション、つまり、昔ながらの普通の
-ファイルのように振る舞うものを使いたいので、ソケットは TCP ソケットに
-接続されたものを扱います。
-ソケットにはこれ以外のタイプもあることに注意してください。
-たとえば、UDP プロトコルは(メッセージ送信に使われている)
-データグラムソケットを作成するために使うことができます。
+이것은 사용하는 프로토콜입니다.
+이 예제에서는 우리들은 스트림 지향 연결, 즉, 보통의 파일처럼 행동하는 것을 사용하고 
+싶기 때문에, 소켓은 TCP 소켓에 접속된 것을 다룹니다.
+소켓에는 이 이외의 타이프도 있다는 것에 주의해주세요.
+예를들어, UDP 프로토콜은 (메시지 송신에 사용되는 ) 데이터그램 소켓을 
+작성하기 위해 사용할 수 있습니다.
 
 =item C<PeerAddr>
 
@@ -2259,14 +2241,12 @@ for localhost is C<"127.1">, if you'd rather use that.
 
 =end original
 
-これはサーバーが実行されているリモートホストの、インターネットアドレス
-もしくは名前です。
-これを C<"www.perl.com"> のような長い名前で指定することも
-C<"204.148.40.9"> のようなアドレスで指定することもできます。
-先の例で使った C<"localhost"> は、常に自分が使用している現在のマシンを
-意味する特別なホスト名です。
-ローカルホストに対するインターネットアドレスは C<"127.1"> で、こちらを
-使うこともできます。
+이것은 서버가 실행되는 리모트 호스트의, 인터넷 주소 혹은 이름입니다.
+이것을  C<"www.perl.com"> 처럼 긴 이름으로 지정하는 것도 
+C<"204.148.40.9"> 같은 주소로 지정할 수도 있습니다.
+앞의 예제에서 사용한 C<"localhost"> 는 항상 자신이 사용하는 현재의 머신을 
+의미하는 특별한 호스트이름입니다.
+로컬호스트에 대한 인터넷 주소는 C<"127.1"> 에서 이쪽을 사용할 수도 있습니다.
 
 =item C<PeerPort>
 
@@ -2281,13 +2261,13 @@ worked, but constant numbers make careful programmers nervous.
 
 =end original
 
-これは接続したいサービスの名称、もしくはポート番号です。
-私たちは先の例で、きちんと設定されたシステムサービスの使える
-システムでなら C<"daytime"> を使うこともできました
-[FOOTNOTE: UNIXでは I</etc/services> にシステムサービスファイルがあります]。
-しかし、実際には括弧でくくって (13) というポート番号の指定を行っていました。
-単に番号を使っても同様に動作するのですが、定数は注意深いプログラマを
-神経質にさせてしまいます。
+이것은 접속하고 싶은 서비스의 명칭, 혹은 포트번호입니다.
+우리들은 앞의 예제에서 제대로 설정된 시스템 서비스를 사용하는 시스템이라면 
+C<"daytime"> 을 사용할 수도 있었습니다
+[FOOTNOTE: UNIX에서는 I</etc/services> 에 시스템 서비스 파일이 있습니다].
+그러나, 실제로는 괄호로 감싸서 (13) 이라는 포트번호의 지정을 수행했습니다.
+단순히 번호를 사용해도 마찬가지로 동작하지만, 정수는 주의깊은 프로그래머를 
+신경질나게 해버립니다.
 
 =back
 
@@ -2301,12 +2281,11 @@ can read one line from it this way:
 
 =end original
 
-コンストラクター C<new> の戻り値が、C<while> ループの中のファイル
-ハンドルとしてどのように使われているかということに気がつきましたか?
-これは間接ファイルハンドルと呼ばれるもので、ファイルハンドルを保持している
-スカラー変数です。
-これは、通常のファイルハンドルと同様のやり方で使うことができます。
-例えば、以下のようにすれば一行読み込みができます:
+생성자 C<new> 의 반환값이 C<while> 루프의 안의 파일 핸들로써 
+어떻게 사용되는 가 하는 것을 아시겠ㄴ요?
+이것은 간접 파일핸들이라고 부르는 것으로, 파일핸들을 가지고 있는 스칼라 변수입니다.
+이것은 통상의 파일핸들과 마찬가지 방법으로 사용할 수 있습니다.
+예를들어, 아래처럼 하면 한줄을 읽을 수 있습니다:
 
     $line = <$handle>;
 
@@ -2316,7 +2295,7 @@ all remaining lines from is this way:
 
 =end original
 
-残りの行全ての読み込みは以下のようにします:
+남은 모든 줄을 읽으려면 다음처럼 합니다:
 
     @lines = <$handle>;
 
@@ -2326,13 +2305,13 @@ and send a line of data to it this way:
 
 =end original
 
-データを一行送るには以下のようにします:
+데이터를 한줄 보내기위해서는 아래처럼 합니다:
 
     print $handle "some data\n";
 
 =head2 A Webget Client
 
-(Webget クライアント)
+(Webget 클라이언트)
 
 =begin original
 
@@ -2343,11 +2322,11 @@ something to the server before fetching the server's response.
 
 =end original
 
-以下の例は、ドキュメントをそこから取るリモートホストと、そのホストから
-取得するドキュメントのリストを引数に取る単純なクライアントです。
-これは先の例よりも興味深いものです。
-なぜなら、この例においてはサーバーの反応をフェッチする前に最初に何かを
-サーバーに送信するからです。
+아래의 예제는 문서를 거기에서 얻는 리모트 호스트와, 그 호스트에서 얻는 문서의 리스트를 
+인수로 취하는 단순한 클라이언트입니다.
+이것은 앞의 예제보다도 흥미 깊은 부분입니다.
+왜냐면, 이 예제에 있어서는 서버의 반응을 fetch 하기 전에 최초에 뭔가를 서버에 
+송신하기 때문입니다.
 
     #!/usr/bin/perl -w
     use IO::Socket;
@@ -2380,16 +2359,15 @@ be a C<"\015\012"> instead.)
 
 =end original
 
-ここでは、“http”サービスを提供する web サーバーがその標準ポートである
-80 番ポートを使っていると仮定しています。
-あなたの使っている web サーバーが異なるポート(例えば 1080 とか 8080 とか)を
-使用しているのであれば、名前付きパラメータペアにしてC<< PeerPort => 8080 >>
-のような形式で指定すべきでしょう。
-C<autoflush> メソッドがソケットに対して使われます。
-そうしなければシステムは私たちが送信した出力を
-バッファリングしてしまうでしょう(あなたが Mac を使っているのであれば、
-ネットワーク越しにデータを送信するプログラム中にあるすべての
-C<"\n"> を C<"\015\012"> に変更する必要もあります)。
+여기에서는 "http" 서비스를 제공하는 web 서버가 그 표준 포트인 80번 포트를 사용한다고 
+가정하고 있습니다.
+당신이 사용하는 web 서버가 다른포트(예를들어 1080 이라든가 8080 이라든가) 를 사용하고 
+있다면, 이름붙은 파라메터 페어에 대해서 C<< PeerPort => 8080 >> 처럼 
+형식으로 지정해야할 겁니다.
+C<autoflush> 메소드가 소켓에 대해서 사용됩니다.
+그렇지 않으면, 시스템은 우리들이 송신한 출력을 버퍼링해버리겠죠.
+(당신이 Mac 을 사용하고 있다면, 네트워크 넘어에 데이터를 보내는 프로그램안에 
+있는 모든 C<"¥n"> 를 C<"¥015¥012"> 로 변경할 필요도 있습니다)
 
 =begin original
 
@@ -2406,18 +2384,16 @@ such a request.
 
 =end original
 
-サーバーへの接続は、このプロセスの最初の一部分でしかありません: 
-一度接続されてしまえば、サーバーの言語を使うべきなのです。
-ネットワーク上の各サーバーは、入力として期待しているそれぞれの小さな
-コマンド言語を持っています。
-HTTP 構文において最初にサーバーに送信するのは "GET" です。
-この場合、単純に指定されたドキュメントのそれぞれをリクエストします。
-そう、私たちは実際には、たとえ同じホストであったとしてもドキュメント毎に
-新しいコネクションを作成しています。
-これが HTTP を使うときに常にそうしなければならない方法なのです。
-最近のwebブラウザーではコネクションを開いたままちょっとの間リモートサーバーを
-離れるリクエストをすることができますが、サーバーはそのようなリクエストを
-処理しなければならないというわけではありません。
+서버로의 접속은 이 프로세스의 최초의 일부뿐입니다:
+한번 접속되어버리면, 서버의 언어를 사용해야합니다.
+네트워크 상의 각 서버는 입력으로써 기대하고 있는 각각의 작은 커맨드 언어를 가지고 있습니다.
+HTTP 구문에 있어서 최초로 서버에 송신하는 것은 "GET" 입니다.
+이 경우, 단순히 지정된 문서의 각각을 리퀘스트합니다.
+우리들은 실제로는 예를들어, 같은 호스트에 있다고 해도 문서마다 
+새로운 커넥션을 작성하고 있습니다.
+이것이 HTTP 를 사용할 때에 항상 그렇게 하지 않으면 안되는 방법입니다.
+최근의 Web 브라우저에서는 커넥션을 연상태로 조금 리모트 서버를 떠나는 
+리퀘스트를 할 수 있지만, 서버는 그런 리퀘스트를 처리하지 않으면 안되는 것은 아닙니다.
 
 =begin original
 
@@ -2425,8 +2401,7 @@ Here's an example of running that program, which we'll call I<webget>:
 
 =end original
 
-以下に挙げるのは、私たちがI<webget>と呼ぶであろうプログラムを
-実行した例です。
+아래에 든 예제는, 우리들이 I<webget> 이라고 부르는 프로그램을 실행한 예제입니다.
 
     % webget www.perl.com /guanaco.html
     HTTP/1.1 404 File Not Found
@@ -2447,9 +2422,8 @@ particular document.  But a long response wouldn't have fit on this page.
 
 =end original
 
-これは特定のドキュメントを見つけられないというものですからあまり
-面白いものでもありません。
-でも、長いレスポンスをここに載せるわけにもいかないでしょう。
+이것은 특정의 문서를 찾지 못했다고 하는 것이기 때문에 그리 재미있는 것도 아닙니다.
+그러나 긴 응답을 여기에 적는 것도 아니겠죠.
 
 =begin original
 
@@ -2458,12 +2432,12 @@ the I<lwp-request> program included with the LWP modules from CPAN.
 
 =end original
 
-このプログラムの全機能バージョン(fully-featured version)は、CPAN にある
-LWP モジュール中の I<lwp-request> というプログラムを見るとよいでしょう。
+이 프로그램의 모든 기능을 사용할 수 있는 버젼은 CPAN 에 있는 
+LWP 모둘 안의 I<lwp-request> 라는 프로그램을 보면 좋습니다.
 
 =head2 Interactive Client with IO::Socket
 
-(IO::Socket を使った対話的クライアント)
+(IO::Socket 을 사용한 대화적 클라이언트)
 
 =begin original
 
@@ -2474,10 +2448,10 @@ type a line, get the answer, etc.
 
 =end original
 
-一つのコマンドを送信し、一つの返答を得るというのであれば具合が良いのですが、
-完全に対話的な何かを設定し、I<telnet> のように動作するものはどうでしょうか?
-ここでできるのは、ある一行をタイプして答を得て、別の行をタイプしてそれに
-対する答を得て…というやり方です。
+하나의 커맨드를 송신해서, 하나의 응답을 얻는다고 하면 모든 것은 좋겠지만, 
+완전하게 대화적인 무엇인가를 설정하고 I<telnet> 처럼 동작하는 것은 어떨까요?
+여기에서 할 수 있는 것은 ,어떤 한줄을 타이프해서 답을 얻어서, 별도의 줄을 타이프해서 
+그것에 대한 답을 얻는... 이런 방법입니다.
 
 =begin original
 
@@ -2496,21 +2470,18 @@ well, which is probably why it's spread to other systems.)
 
 =end original
 
-このクライアントは既に出てきた二つのものよりも複雑ですが、あなたが
-強力な C<fork> 呼び出しをサポートしているシステムを使っているのであれば、
-解決策は乱暴なものではありません。
-通信したいなんらかのサービスに対してコネクションを作ってしまえば、プロセスの
-複製を作るために C<fork> を呼び出します。
-それによる二つのプロセスはそれぞれ、非常に単純なジョブを行います:
-親プロセスはソケットから入力されたすべてを標準出力にコピーし、子プロセスは
-標準入力をソケットへと同じようにコピーします。
-ただ一つのプロセスを使ったときに同じことをするのは B<非常に>
-難しいでしょう。
-なぜなら、二つのことを行う一つのプロセスのためのプログラムよりも
-一つのことを行う二つのプロセスのためのプログラムのほうが
-簡単だからです(この keep-it-simple 法則は UNIX 文化の要石で、良い
-ソフトウェアエンジニアが使うように、(UNIX が)他のシステムよりも広く
-使われていることの理由でしょう)。
+이 클라이언트는 이미 나온 두가지 예제부터 복잡하지만, 당신이 강력한 
+C<fork> 호출을 지원하는 시스템을 사용하고 있다면, 해결책은 거친 것도 아닙니다.
+손신하고 싶은 어떤 서비스에 대해서 커넥션을 만들어 버리면, 프로세스의 
+복제를 만들기 위해서 C<fork> 를 호출합니다.
+그에 의해 두가지 프로세스는 각각, 매우 단순한 잡을 수행합니다:
+부모 프로세스는 소켓에서 입력된 모든 것을 표준출력으로 복사해서, 자식 프로세스는 
+표준입력을 소켓에 똑같이 복제합니다.
+단 하나의 프로세스를 사용한 때에 같은 일을 하는 것은 B<매우> 어렵겠죠.
+왜냐면, 두가지 일을 하는 하나의 프로세스를 위한 프로그램보다도 하나의 일을 
+수행하는 두가지 프로세스를 위한 프로그램이 간단하기 때문입니다(이 
+keep-it-simple 법칙은 UNIX 문화의 주요한 것으로, 좋은 소프트웨어 
+엔지니어가 사용하듯, (UNIX 가) 다른 시스템보다도 널리 사용되는 이유일 겁니다).
 
 =begin original
 
@@ -2518,7 +2489,7 @@ Here's the code:
 
 =end original
 
-プログラムの例です:
+프로그램의 예제입니다:
 
     #!/usr/bin/perl -w
     use strict;
@@ -2564,9 +2535,9 @@ as soon as the remote server has closed its end of the connection.
 
 =end original
 
-親プロセスの C<if> ブロックにある C<kill> 関数は、リモートサーバーが
-コネクションを終了してクローズしてすぐに子プロセス(C<else> ブロックを
-実行しています)にシグナルを送るためのものです。
+부모 프로세스의 C<if> 블록에 있는 C<kill> 함수는 리모트 서버가 커넥션을 종료해서 
+클로즈해서 곧장 자식 프로세스(C<else> 블록을 실행하고 있습니다) 에 시그널을 
+보내기 위한 것입니다.
 
 =begin original
 
@@ -2577,9 +2548,9 @@ following:
 
 =end original
 
-リモートサーバーが一度に一バイト送っていて、そして、あなたが改行を
-待つことなしに即座にデータを必要とする(そうそうないことでしょうが)のなら、
-C<while> ループを以下のようなものに置き換えたくなるでしょう:
+리모트 서버가 한번에 1바이트 보내고, 당신이 개행을 기다리는 일 없이 
+즉시 데이터를 필요로 한다면 C<while> 루프를 아래와 같은 것으로 
+바꾸고 싶겠죠:
 
     my $byte;
     while (sysread($handle, $byte, 1) == 1) {
@@ -2594,12 +2565,12 @@ well.
 
 =end original
 
-読み出しのために一バイト毎にシステムコールを行うのは実に非効率的ですが、
-説明するのに簡単でとりあえずは動くのです:
+읽어내기 위해서 1바이트마다 시스템 콜을 수행하는 것은 비효율적입니다만, 
+설명하기 간단하게 우선은 움직이는 것입니다;
 
 =head1 TCP Servers with IO::Socket
 
-(IO::Socket を使った TCP サーバー)
+(IO::Socket 을 사용한 TCP 서버)
 
 =begin original
 
@@ -2611,12 +2582,11 @@ slightly different arguments than the client did.
 
 =end original
 
-常にそうであるように、サーバーのセッティングはクライアントを実行するよりも
-ほんのちょっと手間がかかります。
-ここで使うのは、サーバーが特定のポートで接続を待つだけという特殊な種類の
-ソケットを作成するというモデルです。
-これは、C<< IO::Socket::INET->new() >> というメソッドをはっきりと異なる
-引数を付けて呼び出してからクライアントを実行することで行います。
+항상 그렇듯, 서버의 세팅은 클라이언트를 실행하는 것보다도 정말 조금 더 수고를 해야합니다.
+여기에서 사용하는 것은 서버가 특정 포트로 접속을 기다리는 것만이라는 특수한 종류의 
+소켓을 작성하는 모델입니다.
+이것은 C<< IO::Socket::INET->new() >> 이라는 메소드를 제대로 다른 인수를 붙여서 
+호출하고나서 클라이언트를 실행하는 것으로 수행합니다.
 
 =over 4
 
@@ -2629,8 +2599,8 @@ still specify C<"tcp"> here.
 
 =end original
 
-これは使用するプロトコルです。
-クライアントと同様、ここでは C<"tcp"> を指定します。
+이것은 사용하는 프로토콜입니다.
+클라이언트와 마찬가지로 여기에서는 C<"tcp"> 를 지정합니다.
 
 =item LocalPort
 
@@ -2648,15 +2618,15 @@ which services current have servers.
 
 =end original
 
-C<LocalPort> 引数でローカルポートを指定します。
-これはサーバーにしたいサービス名かポート番号のいずれかです(UNIX では、
-1024 未満のポートはスーパーユーザー限定です)。
-私たちのサンプルでは 9000 番ポートを使いますが、あなたの使っているシステムで
-重複しなければ好きな番号を使うことができます。
-もし既に使われているポートを使おうとすれば、"Address already in use" の
-ようなメッセージを得ることとなるでしょう。
-UNIX では、C<netstat -a> コマンドを使ってサービスが現在使っているサーバーを
-見ることができます。
+C<LocalPort> 인수로 로컬 포트를 지정합니다.
+이것은 서버에 하고 싶은 서비스 이름이나 포트번호 중 어느 것입니다(UNIX 에서는, 
+1024 미만의 포트는 수퍼유저 한정입니다). 
+우리들의 샘플에서는 9000번 포트를 사용하지만, 당신이 사용하는 시스템에서 
+중복하지 않는다면 좋은 번호를 사용할 수 있스니다.
+만약 이미 사용되는 포트를 사용하려고 하면 "Address already in use" 라는 
+메시지를 보게 될겁니디.
+UNIX 에서는 C<netstat -a> 커맨드를 사용해서 서비스가 현재 사용하는 서버를 
+볼 수 있습니다.
 
 =item Listen
 
@@ -2670,11 +2640,10 @@ is SOMAXCONN.
 
 =end original
 
-C<Listen> パラメーターは、クライアントを待たせておいて受け付けることのできる
-コネクションの最大数を設定します。
-電話の呼び出しを考えてみてください。
-低水準ソケットモジュールは SOMAXCONN というそのシステムの最大値を表す
-特殊なシンボルを持っています。
+C<Listen> 파라메터는 클라이언트를 기다리게 해서 받아들일 수 있는 커넥션의 최대수를 설정합니다.
+전화의 호출을 생각해주세요.
+저수준의 소켓 무듈은 SOMAXCONN 이라는 그 시스템의 최대값을 나타내는 특수한 
+심볼을 가지고 있습니다.
 
 =item Reuse
 
@@ -2686,8 +2655,8 @@ clear out.
 
 =end original
 
-C<Reuse> パラメーターは、システムがバッファーをクリアするための時間を
-掛けずに私たちのサーバーを手作業で再起動するのに必要です。
+C<Reuse> 파라메터는 ㅣ쓰템이 버퍼를 클리어하기 위한 시간을 
+걸리지 않고 우리들의 서버를 수작업으로 재기동하는 것에 필요합니다.
 
 =back
 
@@ -2700,12 +2669,9 @@ bidirectional connection from the remote client.  (Make sure to autoflush
 this handle to circumvent buffering.)
 
 =end original
-
-上で述べたパラメーターを持った汎用のサーバーソケットが生成されれば、
-そのサーバーは接続される新たなクライアントを待ちます。
-C<accept> メソッドにあるサーバーブロックはリモートクライアントからの
-双方向接続を許可します(バッファリングを抑制するためにハンドルに対して
-autoflush することを忘れないように)。
+위에 기술한 파라메터를 가진 범용 서버 소켓이 생성되면, 그 서버는 접속되는 새로운 클라이언트를 기다립니다.
+C<accept> 메소드에 있는 서버 블록은 리모트 클라이언트에서의 쌍방향접속을 허가합니다
+(버퍼링을 제어하기 위해서 핸들에 대해서 autoflust 하는 것을 잊지 마세요).
 
 =begin original
 
@@ -2715,11 +2681,10 @@ you'll have to use the C<sysread> variant of the interactive client above.
 
 =end original
 
-ユーザーに親切にするために、私たちのサーバーはコマンドの入力のプロンプトを
-表示します。
-ほとんどのサーバーはこうしたことをしていません。
-プロンプトには改行がないので、上の例にあったような対話的な
-クライアントの類では C<sysread> を使う必要があるでしょう。
+유저에게 친절하게 하기 위해, 우리들의 서버는 커맨드의 입력의 프롬프트를 나타냅니다.
+대부분의 서버는 이런 일을 하지 않습니다.
+프롬프트에는 개행이 없기 때문에, 위의 예제에 있는 대화적인 
+클라이언트 류에서는 C<sysread> 를 사용할 필요가 있을 겁니다.
 
 =begin original
 
@@ -2730,11 +2695,11 @@ covered in Chapter 6 of the Camel.
 
 =end original
 
-このサーバーは五種類のコマンドのいずれか一つを取り、クライアントに対して
-(コマンドに応じた)出力を行います。
-多くのネットワークサーバーとは異なり、このサーバープログラムは一度に一つの
-クライアントしか扱えないということに注意してください。
-マルチスレッド化されたサーバーはらくだ本の第六章でカバーされています。
+이 서버는 다섯종류의 커맨드중 하나를 취해서, 클라이언트에 대해서 
+(커맨드에 따른) 출력을 수행합니다.
+많은 네트워크 서버와는 다르게, 이 서버 프로그램은 한번에 하나의 클라이언트밖에 
+다룰 수 없다는 것에 주의해주세요.
+멀티스레드화된 서버는 낙타책의 제6장에서 다루고 있습니다.
 
 =begin original
 
@@ -2742,7 +2707,7 @@ Here's the code.  We'll
 
 =end original
 
-以下プログラムです。
+아래의 프로그램입니다.
 
  #!/usr/bin/perl -w
  use IO::Socket;
@@ -2782,7 +2747,7 @@ Here's the code.  We'll
 
 =head1 UDP: Message Passing
 
-(UDP: メッセージ配送)
+(UDP: 메시지 송신)
 
 =begin original
 
@@ -2798,11 +2763,9 @@ with.
 
 =end original
 
-クライアント・サーバーをセットアップするもう一つの種類はコネクションではなく
-メッセージを使うものです。
-UDP 通信はオーバーヘッドが低いものの、メッセージがすべて到着するという
-保証がなく到着の順序もきちんと保たれていることも保証されてないために
-信頼性もまた劣るものになっています。
+클라이언트, 서버를 섹업하는 다른 하나의 종류는 커넥션이 아니라 메시지를 사용하는 것입니다.
+UDP 통신은 오버헤드가 낮고, 메시지가 모두 도착한다는 보증이 없이 도착의 순서도 
+제대로 지켜주는 것도 보증되지 않기 때문에 신뢰성이 떨어집니다.
 それでも、UDP には一度に宛て先ホストの塊全体
 (通常はローカルサブネット)に対して“ブロードキャスト”、“マルチキャスト”が
 できるということを含め、TCPに対する幾つかのアドバンテージがあります。
