--- a/trunk/perldoc/ko/perl/5.10/perldata.pod
+++ b/trunk/perldoc/ko/perl/5.10/perldata.pod
@@ -1,5 +1,5 @@
 
-=encoding euc-jp
+=encoding utf8
 
 =head1 NAME
 
@@ -9,7 +9,7 @@ perldata - Perl data types
 
 =end original
 
-perldata - Perl のデータ型
+perldata - Perl 의 데이터 타입
 
 =head1 DESCRIPTION
 
@@ -30,14 +30,12 @@ values indexed by their associated string key.
 
 =end original
 
-Perl には、スカラ、スカラの配列、「ハッシュ」とも呼ばれるスカラの
-連想配列という 3 つの組み込みデータ型があります。
-スカラは単一の(任意の長さの)文字列(利用可能メモリによってのみ制限されます)か、
-数値か、何かへのリファレンス(これは L<perlref> で議論します)のいずれかです。
-通常の配列は 0 を基点とする数値で添え字づけされるスカラの順序付き
-リストです。
-ハッシュ配列は、文字列のキーのインデックスと、それに結び付けられた
-スカラ値の、順序のない集合です。
+Perl 에는 스칼라, 스칼라의 배열, "해쉬" 라고도 불리는 스칼라의 연상배열이라는 
+3가지의 내장 데이터 타입이 있습니다.
+스칼라는 단일의 (임의의 길이의) 문자열(이용가능한 메모리에 의해서만 제한됩니다)이나 
+수치나, 어딘가로의 리퍼런스(이것은 L<perlref> 에서 의논합니다) 중 하나입니다.
+보통의 배열은 0 을 기점으로 하는 수치에서 첨자가 붙은 스칼라의 순서붙은 리스트입니다.
+해쉬배열은 문자열의 키의 인덱스와 그에 연결된 스칼라값, 순서가 없는 집합니다.
 
 =begin original
 
@@ -58,20 +56,18 @@ X<identifier>
 
 =end original
 
-値は通常、名前もしくは名前付きのリファレンスを通して参照されます。
-名前の最初にある文字は、その名前がどのような構造のデータを
-参照しているのかを区別します。
-名前の残りの部分は、参照する値を特定するものです。
-通常、この名前は一つの I<識別子>、つまり、英字か下線から始まって
-それに英字、下線、数字が続く文字列のことです。
-一部のケースにおいては C<::>(あるいはやや古風な C<'>) で分けられた
-識別子の並びであってもかまいません。
-これの最後のもの以外の名前は、最後の部分にある識別子を
-その名前空間に置くためのパッケージの名前として解釈されます
-(詳細は L<perlmod/Packages> を参照してください)。
-リファレンスを生成する式の単純な識別子を、実行に値に置き換えることも
-可能です。
-これはこの文書の後の部分と、L<perlref> に詳細な説明があります。
+값은 보통, 이름 또는 이름붙은 리퍼런스를 통해서 참조됩니다.
+이름의 최초에 있는 문자는, 그 이름이 어떤 구조의 데이터를 참조하는 가를 구별합니다.
+이름의 남은 부분은, 참조하는 값을 특정하는 것입니다.
+보통 이 이름은 하나의 I<식별자>, 즉, 알파벳이 밑줄로 시작되고, 
+그에 영자, 밑줄, 숫자가 이어지는 문자열을 말합니다.
+일부의 케이스에 있어서는 C<::>(혹은 매우 고전풍의 C<'>) 으로 나눠진 
+식별자의 나열이어도 상관없습니다.
+그 최후의 것 이외의 이름은 최후의 부분에 있는 식별자를 그 이름공간에 
+두기위한 패키지의 이름으로 해석됩니다.
+(자세한 내용은 L<perlmod/Packages> 를 참조해주세요).
+리퍼런스를 생성하는 식의 단순한 식별자를, 실행 시에 값을 바꾸는 것도 가능합니다.
+이것은 문서의 뒷부분과 L<perlref> 에 상세한 설명이 있습니다.
 X<identifier>
 
 =begin original
@@ -88,16 +84,14 @@ X<variable, built-in>
 
 =end original
 
-Perl はこれらの規則に従っていない名前を持っている組み込みの変数も
-持っています。
-これらは変わった名前をもっているので、あなたが使った普通の
-変数との間で間違って衝突することがありません。
-正規表現の括弧づけされた部分(parenthesized parts)の文字列は C<$> の後に
-数字だけが続いている名前で保存されます( L<perlop> と L<perlre> を
-参照してください)。
-それに加え、Perl の内部的な動作に対する窓を開けている幾つかの
-特殊変数が、句読点文字と制御文字を含む名前を持っています。
-これらは L<perlvar> で文書化されています。
+Perl 은 이런 규칙들에 따르지 않은 이름을 가지는 내장 변수도 가지고 있습니다.
+이것은 좀 특이한 이름을 가지고 있기 때문에, 당신이 사용한 보통의 변수와 
+착각해서 충돌해서 사용할 일이 업슷ㅂ니다.
+정규표현의 괄호 붙은 부분(parenthesized parts) 문자열은 C<$> 의 뒤에 
+숫자만이 이어지는 이름으로 보존됩니다( L<perlop> 와 L<perlre> 를 참조해주세요).
+그에 더해서, Perl 의 내부적인 동작에 대한 창을 열고 있는 몇가지의 특수변수가 
+구독점문자와 제어문자를 포함한 이름을 가지고 있습니다.
+이것들은 L<perlvar> 로 문서화되어 있습니다.
 X<variable, built-in>
 
 =begin original
@@ -110,10 +104,10 @@ X<scalar>
 
 =end original
 
-スカラ値の参照は、配列やハッシュの一要素であるスカラを参照する場合でも、
-常に名前に '$' を付けます。
-シンボル '$' は文法的に英単語 "the" のように働き、単一の値が
-想定されていることを示しています。
+스칼라값의 참조는 배열이나 해쉬의 한 요소인 스칼라를 참조하는 경우에도, 
+항상 이름에 '$' 를 붙입니다.
+심볼 '$'은 문법적으로 영단어 "the" 처럼 움직이고, 단일한 값이 
+상정되어 있는 것을 나타냅니다.
 X<scalar>
 
     $days		# the simple scalar value "days"
@@ -130,9 +124,9 @@ X<array>
 
 =end original
 
-配列全体(および配列やハッシュのスライス)は '@' で示します;
-これは英単語での "these" や "those" のように働き、複数の値が
-想定されていることを示します。
+배열전체(및 배열이나 해쉬의 슬라이스)는 '@' 로 표시합니다;
+이것은 영단어에서의 "these"나 "those" 처럼 움직이고, 복수의 값이 
+상정되는 것을 나타냅니다.
 X<array>
 
     @days		# ($days[0], $days[1],... $days[n])
@@ -146,7 +140,7 @@ X<hash>
 
 =end original
 
-ハッシュ全体は '%' で示します:
+해쉬 전체는 '%' 로 나타냅니다:
 X<hash>
 
     %days		# (key1, val1, key2, val2 ...)
@@ -160,10 +154,10 @@ but you don't really care about that yet (if ever :-).
 
 =end original
 
-さらに、サブルーチンは名前の前に '&' を付けて示しますが、英語でもほとんど
-使われなくなった "do" のように、曖昧にならなければ、省略できます。
-シンボルテーブルのエントリは、名前に '*' を付けて示すことができますが、
-(気にする気があっても :-)まだ気にする必要はありません。
+거기에 서브루틴은 이름의 앞에 '&' 를 붙여서 나타내지만, 영어에서도 대부분 
+사용되지 않게 된 "do" 처럼, 애매하다면 생략할 수 있습니다.
+심볼 테이블의 엔트리는 이름에 '*' 를 붙여서 나타낼 수 있지만, 
+(신경써봐도) 아직은 신경 쓸 필요는 없습니다.
 
 =begin original
 
@@ -179,15 +173,14 @@ X<namespace>
 
 =end original
 
-変数のすべての型には、いくつかの変数でない識別子と同様、
-それぞれの名前空間があります。
-これは、衝突を心配せずに、スカラ変数、配列、ハッシュ -- さらに
-ファイルハンドル、ディレクトリハンドル、サブルーチン名、フォーマット名、
-ラベルに、同じ名前を付けることができることを意味します。
-つまり、C<$foo> と C<@foo> は 2 つの異なる変数であるということです。
-また、C<$foo[1]> は C<@foo> の一部であって、C<$foo> の一部ではありません。
-少々奇妙に思えるかもしれませんが、それで良いのです;
-奇妙なのですから。
+변수의 모든 형태에는 몇가지 변수가 아닌 식별자와 마찬가지로,
+각각의 이름공간이 있습니다.
+이것은 충돌을 걱정하지 않고, 스칼라변수, 배열, 해쉬 -- 거기에 
+파일핸들, 디렉토리 핸들, 서브루틴이름, 포맷이름, 라벨, 같은 이름을 
+붙일 수 있다는 것을 의미합니다.
+즉, C<$foo> 와 C<@foo> 는 두가지 다른 변수라는 것입니다.
+또, C<$foo[1]>은 C<@foo> 의 일부분이고 C<$foo> 의 일부는 아닙니다.
+조금 이상하게 생각할 수 있을지도 모르지만, 그것으로 좋은 것입니다. 이상하기 때문에요.
 X<namespace>
 
 =begin original
@@ -207,19 +200,18 @@ X<case>
 
 =end original
 
-変数の参照は、いつも '$'、'@'、'%' で始まりますから、「予約」語は、
-変数名としては、本当の意味で予約されているわけではありません。
-しかしながら、先頭に特別な文字を付けない、ラベルやファイルハンドルとしては、
-I<予約されている> ことになります。
-たとえば、"log" といった名前のファイルハンドルを使うことはできません。
-ヒント: C<open(log,'logfile')> などではなく、
-C<open(LOG,'logfile')> としてください。
-大文字のファイルハンドルを使えば、読みやすくもなりますし、
-将来に渡る予約語との衝突も避けられます。
-大文字と小文字は B<区別されます> から、"FOO"、"Foo"、"foo" は、
-すべて違う名前です。
-英字と下線で始まる名前は、名前の一部に数字や下線を
-含むことができます。
+변수의 참조는 항상 '$', '@', '%' 로 시작하기 때문에, "예약어"는 
+변수이름으로써는 진짜 의미로 예약되어 있는 것은 아닙니다.
+그러나, 앞에 특별한 문자를 붙이지 않고, 라벨이나 파일핸들로써는 
+I<예약된> 것이 됩니다.
+예를들어, "log" 같은 이름의 파일핸들을 사용할 수는 없습니다.
+힌트: C<open(log, 'logfile')> 등이 아니라
+C<open(LOG, 'logfile')> 로 해주세요.
+대문자의 파일핸들을 사용하면 읽기 쉬워지고, 
+장래에 건네지는 예약어와의 충돌도 피할 수 있습니다.
+대문자와 소문자는 B<구별됩니다>, 그래서 "FOO", "Foo", "foo" 는 
+모드 다른 이름입니다.
+영어와 밑줄로 시작하는 이름은 이름의 일부에 숫자나 밑줄을 포함할 수 있습니다.
 X<identifier, case sensitivity>
 X<case>
 
@@ -231,9 +223,8 @@ of this, see L<perlref>.
 
 =end original
 
-そのような英数字の名前を、適切な型へのリファレンスを返す式で
-置き換えることも可能です。
-詳しくは、L<perlref> を参照してください。
+그런 영숫자의 이름을 적절한 형태로 리퍼런스를 건내는 식으로 바꿀 수도 있습니다.
+자세한 내용은 L<perlref> 를 참조해주세요.
 
 =begin original
 
@@ -246,16 +237,16 @@ id.)
 
 =end original
 
-数字で始まる名前には、数字しか含めることができません。
-英字、下線、数字、キャレット(制御文字)以外の文字で始まる名前は、
-C<$%> や C<$$> のように 1 文字に限定されます(これら 1 文字の名前の多くは、
-Perl があらかじめ意味を定めています。
-たとえば、C<$$> はカレントプロセスのプロセス ID を示します)。
+숫자로 시작하는 이름에는 숫자만 포함할 수 있습니다.
+알파벳, 밑줄, 숫자, 캐럿(제어문자) 이외의 문자로 시작하는 이름은 
+C<$%>나 ,C<$$> 처럼 한 문자에 한정됩니다(이런 1문자 이름의 대부분은,
+Perl 에서 이미 의미를 정하고 있습니다.
+예를들어 C<$$> 는 현재 프로세스의 프로세스 ID 를 나타냅니다).
 
 =head2 Context
 X<context> X<scalar context> X<list context>
 
-(コンテキスト)
+(컨텍스트)
 
 =begin original
 
@@ -271,17 +262,16 @@ and "sheep".
 
 =end original
 
-Perl における演算や値の解釈は、その演算や値の置かれたコンテキストからの
-要求に依存する場合があります。
-このコンテキストというものには大きく二つあり、リストコンテキストと
-スカラコンテキストと呼ばれます。
-リストが要求されるコンテキストではリスト値を返し、
-そうでなければスカラ値を返すような演算も存在します。
-そのような演算については、ドキュメントでその演算に触れるときに
-付記しています。
-言い方を変えると、Perl では、ある種の演算が一つの値を返して欲しいか、
-複数の値を返して欲しいかによって多重定義されているということです。
-"fish" や "sheep" といった、単複同形の英単語と似ているかもしれません。
+Perl 에 있어서 연산이나 값의 해석은 그 연산자나 값이 놓여진 컨텍스트에서
+요구에 의존하는 경우가 있습니다.
+이 컨텍스트라는 것에는 크게 두가지가 있는데, 리스트 컨텍스트와 
+스칼라 컨텍스트라고 부릅니다.
+리스트가 요구되는 컨텍스트에서는 리스트 값을 반환하고,
+그렇지 않으면 스칼라 값을 반환하는 연산도 존재합니다.
+그런 연산에 대해서는 문서에서 그 연산에 접근한 때에 부기하고 있습니다.
+바꿔말하면, Perl 에서는 어떤 종류의 연산이 하나의 값을 반환하고 싶어하는 지,
+복수의 값을 반환하고 싶어하는 지에 따라서 다중정의된다는 것입니다.
+"fish" 나 "sheep" 같은 단일 복수형태의 영어단어와 비슷하겠네요.
 
 =begin original
 
